# synthora

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.local.yml  docker-compose.ollama.yml  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  nightly-e2e.yml  storm-eval-nightly.yml
apps/api/: pyproject.toml
apps/api/src/synthora/api/: __init__.py  auth.py  document_extract.py  export.py  main.py  mcp_runtime.py  mcp_server.py  mcp_tools.py  routes_extra.py  settings.py
apps/web/: .dockerignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: live-smoke.spec.ts  smoke.spec.ts
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/__tests__/: run-lifecycle.test.tsx
apps/web/src/components/: Chat.tsx  Documents.tsx  EventFeed.tsx  History.tsx  KnowledgeMapView.tsx  Login.tsx  NewResearch.tsx  News.tsx  RunView.tsx  Settings.tsx
apps/web/src/hooks/: useRunEvents.ts
apps/worker/: pyproject.toml
apps/worker/src/synthora/worker/: __init__.py  executor.py  main.py  news.py  queue.py
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: architecture.md  eval-storm.md  feature-parity.md  parity-audit.md  pipelines.md
docs/solutions/runtime-errors/: compose-smoke-asyncpg-and-dockerignore.md
eval/storm/: __init__.py  eval_article_quality.py  eval_outline_quality.py  metrics.py
scripts/: smoke.sh
scripts/storm_eval/: download_freshwiki.py  export_storm_format.py  run_freshwiki.py
tests/: conftest.py  helpers.py  test_adapters.py  test_anthropic.py  test_api_route_parity.py  test_checkpoint.py  test_core_models.py  test_documents.py  test_embeddings_defaults.py  test_export.py  test_intelligence.py  test_isolation.py  test_mcp_client.py  test_mcp_server.py  test_metrics.py  test_model_resolver.py  test_news.py  test_orchestration.py  test_persistence.py  test_pipelines.py  test_platform.py  test_sdk.py  test_storm_eval_metrics.py  test_zero_gap.py
