[project]
name = "synthora"
version = "0.1.0"
description = "Synthora - next-generation deep research platform (LangGraph orchestration, STORM-style knowledge synthesis, self-hosted platform layer)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "synthora-core",
    "synthora-adapters",
    "synthora-intelligence",
    "synthora-orchestration",
    "synthora-persistence",
    "synthora-sdk",
    "synthora-api",
    "synthora-worker",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/api", "apps/worker"]

[tool.uv.sources]
synthora-core = { workspace = true }
synthora-adapters = { workspace = true }
synthora-intelligence = { workspace = true }
synthora-orchestration = { workspace = true }
synthora-persistence = { workspace = true }
synthora-sdk = { workspace = true }
synthora-api = { workspace = true }
synthora-worker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "aiosqlite>=0.20",
    "fakeredis>=2.26",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
